--- a/www/index.html
+++ b/www/index.html
@@ -45,7 +45,7 @@
                                 + currLat +'&longitude=' + currLong;
                 //go there
                 alert('here comes the uuid!');
-                alert(str_uuid);
+                alert(device.uuid);
             }
             
             function onError(error) {
