--- a/www/index.html
+++ b/www/index.html
@@ -63,13 +63,13 @@
         </script>
         
     </head>
-    <body><!--
+    <body>
         <div class="app">
             <h1 style="text-align: center;">WELCOME DRIVERS!</h1>
             <p id="geolocation">Finding geolocation...</p>
             <div id="buttons">                                                                
                 <button style="text-align: center;" class="bluBtn" onclick = "window.location.href = 'http://192.168.1.148/svctrak/index.a5w?name=Justin&job=developer'">Enter Driver Portal</button></h1>
             </div>
-        </div> -->
+        </div>
     </body>
 </html>
